tests/Checker/everything/errors/17a.sol
======= The VC compiler =======

Pass 1: Lexical and syntactic Analysis
Pass 2: Semantic Analysis
ERROR: 0(0)..0(0): *17: array subscript is not an integer
Compilation was unsuccessful.
